# randomthing

./: CMakeLists.txt  README.md  doc.txt
MapEditor/: Makefile  gtkglext-example  gtkglext-example.c
MapEditor/MapEditor/: AddTile.Designer.cs  AddTile.cs  AddTrigger.Designer.cs  AddTrigger.cs  Camera.cs  ClickHandler.cs  ClickHandlerTileCreator.cs  Configuration.cs  Creature.cs  CreaturesManager.cs  EditorEngine.cs  Field.cs  IClickListener.cs  ListenerClickHandler.cs  ManageTrigger.Designer.cs  ManageTrigger.cs  Map.cs  MapEditor.Designer.cs  MapEditor.cs  MapEditor.csproj  MapEditor.resx  MapEditor.sln  MapLoadException.cs  MapLoadingState.cs  MapLoadingStateFields.cs  MapLoadingStateSize.cs  MapLoadingStateStartPoint.cs  MobClickHandler.cs  MouseController.cs  MoveToNextMapTrigger.cs  NewMap.Designer.cs  NewMap.cs  Program.cs  SavingException.cs  SelectFieldControll.Designer.cs  SelectFieldControll.cs  SpawnCreatureControll.Designer.cs  SpawnCreatureControll.cs  SpawnMobTrigger.cs  SpawnPointControll.Designer.cs  (+8 more)
MapEditor/MapEditor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Maps/final/: map
Maps/forest0/: creatures.txt  map  triggers.txt
Maps/forest1/: creatures.txt  map  tiles.txt  triggers.txt
Maps/mt/: creatures.txt  map  tiles.txt  triggers.txt
docs/: animation.txt  creatures.txt  creatures_list.txt  creatures_vel_wrogowie.txt  maps.txt  triggers.txt
engine/: CMakeLists.txt  tiles.txt
engine/src/: animation.cpp  animation.h  engine.cpp  engine.h  game_map.cpp  game_map.h  game_objects.cpp  game_objects.h  helper.cpp  helper.h  image_loader.cpp  image_loader.h  patterns.h  shapes.cpp  shapes.h  texture_loader.cpp  texture_loader.h  thing.cpp  timer.h  triggers.cpp  triggers.h
engine/test_map/: map  map_gen  map_gen.cpp  tiles.txt
test_map/: creatures.txt  map  tiles.txt  triggers.txt
